# nomad-visu

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  notes.py  notes.txt  objects.inv  pyproject.toml  requirements-all.txt  requirements-docs.txt  requirements.txt  sitemap.xml  staticVisualizer.py  test.ipynb  visualizer.py  widgetsInteractionsMixin.py
.github/workflows/: paper-draft.yaml  python-mkdocs.yml  python-package.yml  python-publish.yml
data/: RS_structures.xyz  ZB_structures.xyz
development/: index.html
docs/: development.md  examples.md  index.md  introduction.md  library.md  overview.md  references.md  setup.md
examples/: dev-alternatiev-3d-viewers.ipynb  dev-refactoring-2.ipynb  dev-refactoring-3.ipynb  dev-refactoring.ipynb  dev-setting-panel.ipynb  index.html  octet_binaries.ipynb  query_archive-2.ipynb  query_archive.ipynb  test_octet_binaries.ipynb  test_query_archive.ipynb  test_tetradymites.ipynb  tetradymites-2.ipynb  tetradymites.ipynb
examples/octet_binaries/: df
examples/query_archive/: df
examples/tetradymites/: df
include/: _batch_update.py  _colors.py  _geometry.py  _instantiate_widgets.py  _max_covering.py  _sisso.py  _smart_fract.py  _updates.py  _view_structure.py
nomad_lab_visualizer/: __init__.py  batch_update.py  configWidgets.py  figure.py  geometry.py  instantiate_widgets.py  staticVisualizer.py  topWidgets.py  updates.py  utilsButton.py  utilsWidgets.py  view_structure.py  viewersWidgets.py  visualizer.py  widgetsInteractionsMixin.py
nomad_lab_visualizer/include/: _batch_update.py  _geometry.py  _instantiate_widgets.py  _optimize_sequence.py  (+2 more)
nomad_visualizer/: staticVisualizer.py  test_octet_binaries.ipynb  test_query_archive.ipynb  test_tetradymites.ipynb  visualizer.py  widgetsInteractionsMixin.py
overview/: index.html
paper/: paper.md
references/: index.html
search/: search_index.json
structures/: As_As_Se_Se_Se.xyz  As_As_Te_Se_Se.xyz  As_As_Te_Te_S.xyz  As_Bi_S_Se_Te.xyz  As_Bi_S_Te_S.xyz  As_Bi_Te_Te_Se.xyz  As_Sb_S_Te_Te.xyz  As_Sb_Te_Se_Se.xyz  Bi_As_Se_Se_Te.xyz  Bi_As_Te_Se_S.xyz  Bi_As_Te_Te_Te.xyz  Bi_Bi_S_S_S.xyz  Bi_Bi_S_S_Se.xyz  Bi_Bi_S_Se_Se.xyz  Bi_Bi_S_Te_Te.xyz  Bi_Bi_Se_Te_Se.xyz  Bi_Sb_S_Te_Se.xyz  Sb_Bi_S_S_S.xyz  Sb_Bi_S_Se_S.xyz  Sb_Bi_Se_Se_S.xyz  Sb_Sb_S_Te_Te.xyz  Sb_Sb_Se_S_Se.xyz  Sb_Sb_Se_Se_Se.xyz  Sb_Sb_Te_Te_Te.xyz
(+8828 files in other folders)
