[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_lab_visualizer"
description = "This is plot/visualizer widget for atomistic structures which can be used in Jupyter Notebooks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    'ipywidgets',
    'plotly',
    'py3dmol',
    'numpy',
    'pandas',
    'scipy',
    'scikit-learn'
]
# keywords = ["one", "two"]
# license = {text = "BSD 3-Clause License"}
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pip-tools", "black", "mypy", "flake8"]
test = ["pytest"]
docs = ["mkdocs"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
