[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad_lab_visualizer"
description = "This is plot/visualizer widget for atomistic structures which can be used in Jupyter Notebooks."
readme = "README.md"
dynamic = ["version"]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
dependencies = [
    'ipywidgets',
    'plotly',
    'py3dmol',
    'numpy',
    'pandas',
    'scipy',
    'scikit-learn',
]
classifiers = ["Programming Language :: Python :: 3"]

[project.optional-dependencies]
dev = ["pip-tools", "yapf", "mypy", "flake8"]
test = ["pytest"]
docs = ["mkdocs"]
