[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-visu"
description = "A Python package for atomistic data visualisation"
readme = "README.md"
dynamic = ["version"]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
dependencies = [
    'notebook',
    'ipywidgets',
    'plotly',
    'py3dmol',
    'numpy',
    'pandas',
    'scipy',
    'scikit-learn',
]
classifiers = ["Programming Language :: Python :: 3"]

[project.optional-dependencies]
dev = ["pip-tools", "yapf", "mypy", "flake8"]
test = ["pytest"]
docs = ["mkdocs", "mkdocs-material","mkdocs-autorefs", "mkdocstrings"]
